# tic-tac-toe

./: .gitignore  README.txt
tic-tac-toe/: CMakeLists.txt
tic-tac-toe/cmake/: FindSDL2_image.cmake
tic-tac-toe/src/: main.cpp
